--- a/static/css/common.css
+++ b/static/css/common.css
@@ -5,4 +5,38 @@ body {
 	padding: 8px 20px;
 	font-weight: bold;
 }
-a.card {text-decoration: none;}
+.card-deck .card {
+	text-decoration: none;
+	transition: all 0.2s;
+	cursor: pointer;
+  max-width: 346px;
+  margin-top: 30px;
+  height: 400px;
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+.card-deck .card:not(:first-child) {
+    margin-left: 12px;
+}
+.card-deck .card:not(:last-child) {
+    margin-right: 12px;
+}
+.card-deck .card:hover {
+	box-shadow: 0 7px 21px rgba(0,0,0,.15);
+	-webkit-transform: translate3d(0,-6px,0);
+  transform: translate3d(0,-6px,0);
+  transition: all 0.2s;
+}
+.card-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.card .add-project {
+  width: 345px;
+  height: 400px;
+  cursor: pointer;
+  margin-left: -21px;
+  margin-top: -21px;
+  background-color: #fff;
+}
