reorganize the project directory structure, executor dropdown component can fetch users from db now

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -200,7 +200,7 @@ input, textarea {
   margin-top: 4px;
   padding: 4px 0 8px 0;
   background-color: #fff;
-  left: -105px;
+  left: -85px;
   border-radius: 2px;
   border: 1px solid #ccc;
   border: 1px solid rgba(0,0,0,.15);
@@ -215,7 +215,7 @@ ul.dd-menu {
   padding-left: 0;
   list-style-type: none;
 }
-ul.dd-menu > li > a.menu-item {
+ul.dd-menu > li > a.dd-list-item {
   display: block;
   position: relative;
   line-height: 32px;
@@ -227,10 +227,10 @@ ul.dd-menu > li > a.menu-item {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
-ul.dd-menu > li > a.menu-item:hover {
+ul.dd-menu > li > a.dd-list-item:hover {
   background-color: #f1f8ff;
 }
-a.menu-item img {
+a.dd-list-item img {
     width: 32px;
     height: 32px;
     position: absolute;
