--- a/static/css/common.css
+++ b/static/css/common.css
@@ -207,6 +207,7 @@ input, textarea {
   border: 1px solid #ccc;
   border: 1px solid rgba(0,0,0,.15);
   box-shadow: 0 6px 12px rgba(0,0,0,.175);
+  z-index: 99;
 }
 .dd > .dd-input {
   padding: 8px 12px;
