--- a/static/css/common.css
+++ b/static/css/common.css
@@ -143,17 +143,17 @@ input, textarea {
 /* common navbar end */
 
 /* task modal-dialog start */
-.executor-row > label {
+.executor-row > label, .tag-row > label {
   float: none;
 }
-.executor-row > ul.executor-list {padding: 0 15px;}
-.executor-list > li, .task-labels > li {
+.executor-row > ul.executor-list, .tag-row > ul.tag-list {padding: 0 15px;}
+.executor-list > li, .task-tags > li, .tag-list > li {
   position: relative;
   float: left;
   list-style-type: none;
   margin: 0 10px 5px 0;
 }
-.executor-list > li > a, .task-labels > li > a  {
+.executor-list > li > a, .task-tags > li > a, .tag-list > li > a  {
   display: block;
   position: relative;
   background-color: #f1f8ff;
@@ -169,14 +169,17 @@ input, textarea {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-.executor-list > li > a > img {
+.tag-list > li > a {
+  padding: 4px 8px;
+}
+.executor-list > li > a > img, .tag-list > li > a > img {
   width: 24px;
   height: 24px;
   position: absolute;
   top: 2px;
   left: 2px;
 }
-.executor-list > li > .remove-executor {
+.executor-list > li > .remove-label, .tag-list > li > .remove-label {
   position: absolute;
   line-height: 24px;
   padding-left: 6px;
@@ -189,11 +192,11 @@ input, textarea {
   transition: all 0.2s;
   cursor: pointer;
 }
-.executor-list li.removable:hover .remove-executor {
+.executor-list li.removable:hover .remove-label, .tag-list li.removable:hover .remove-label {
   opacity: 1;
   z-index: 2;
 }
-.executor-list > li > a.new-executor {
+.executor-list > li > a.new-executor, .tag-list > li > a.new-tag {
   padding-left: 8px;
   top: 0;
 }
@@ -210,13 +213,42 @@ input, textarea {
   z-index: 99;
 }
 .dd > .dd-input {
-  padding: 8px 12px;
+  padding: 4px 12px 8px;
   min-width: 200px;
   border-bottom: 1px solid #eee;
+}
+.dd > .dd-input > input {
+  display: inline-block;
+}
+#tagDropdown-newTask > .dd > .dd-input > input, #tagDropdown-editTask > .dd > .dd-input > input {
+  max-width: 130px;
+}
+.dd > .dd-input > .add-label {
+  background: none;
+  border: 0;
+  padding: 0;
+  margin-left: 14px;
+  color: #555;
+  outline: 0;
 }
 ul.dd-menu {
   padding-left: 0;
   list-style-type: none;
+  max-height: 220px;
+  overflow-y: auto;
+}
+ul.dd-menu::-webkit-scrollbar-track{
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background-color: #fff;
+  border-radius: 2px;
+}
+ul.dd-menu::-webkit-scrollbar{
+  width: 4px;
+  background-color: #fff;
+}
+ul.dd-menu::-webkit-scrollbar-thumb{
+  background-color: #9E9E9E;
+  border-radius: 2px;
 }
 ul.dd-menu > li > a.dd-list-item {
   display: block;
@@ -374,11 +406,30 @@ a.dd-list-item i {
   padding-bottom: 10px;
   line-height: 24px;
 }
-.task-labels {
+.task-tags {
   margin-bottom: 0;
   padding-left: 0;
 }
-.task-labels > li > a {
-  padding: 2px 8px;
+.task-tags > li {
+  float: left;
+  margin-right: 15px;
+  color: #808080;
+  line-height: 18px;
+  border-radius: 2px;
+  background-color: #e1e1e1;
+}
+.task-tags > li > span {
+  position: relative;
+  font-size: 12px;
+  padding: 0 6px 0 18px;
+}
+.task-tags > li > span > span.tag-dot {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  top: 3px;
+  left: 6px;
+  border-radius: 3px;
+  background-color: #3DA8F5;
 }
 /* task end */
