--- a/static/css/common.css
+++ b/static/css/common.css
@@ -12,6 +12,44 @@ input, textarea {
 .dropdown { max-width: 160px; margin: 0 auto; } 
 /* common style end */
 
+/* notification style start */
+.notifications-container {
+  position: absolute;
+  z-index: 1100;
+}
+.notifications-container-bottomLeft {
+  left: 0px;
+  top: auto;
+  bottom: 24px;
+  margin-left: 24px;
+}
+.notification {
+  position: relative;
+  margin-top: 10px;
+  line-height: 24px;
+  font-size: 16px;
+  padding: 12px;
+  width: 300px;
+  border-radius: 2px;
+  background-color: #fff;
+  box-shadow: 1px 2px 2px rgba(0,0,0,.2);
+}
+.notification-error, .notification-success, .notification-normal, .notification-warning {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 4px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+.notification-error {background-color: #ff4f3e;}
+.notification-success {background-color: #00a854;}
+.notification-normal {background-color: #A6A6A6;}
+.notification-warning {background-color: #FFAF38;}
+
+/* notification style end */
+
 /* modal-dialog start */
 .modal-body input, .modal-body textarea {
   /*outline: none;
@@ -63,7 +101,7 @@ input, textarea {
 /* modal-dialog end */
 
 .priority-0 {
-  background-color: #ddd;
+  background-color: #A6A6A6;
 }
 .priority-1 {
   background-color: #ffaf38;
@@ -244,16 +282,16 @@ ul.dd-menu {
   max-height: 220px;
   overflow-y: auto;
 }
-ul.dd-menu::-webkit-scrollbar-track{
+.modal-body::-webkit-scrollbar-track, ul.dd-menu::-webkit-scrollbar-track{
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   background-color: #fff;
   border-radius: 2px;
 }
-ul.dd-menu::-webkit-scrollbar{
+.modal-body::-webkit-scrollbar, ul.dd-menu::-webkit-scrollbar{
   width: 4px;
   background-color: #fff;
 }
-ul.dd-menu::-webkit-scrollbar-thumb{
+.modal-body::-webkit-scrollbar-thumb, ul.dd-menu::-webkit-scrollbar-thumb{
   background-color: #9E9E9E;
   border-radius: 2px;
 }
