--- a/static/css/common.css
+++ b/static/css/common.css
@@ -1,6 +1,8 @@
 body {
 	background-color: #fafafa;
 }
+
+/* bootstrap overwrite end */
 /* common style start */
 input, textarea {
   -webkit-box-shadow: none !important;
@@ -140,6 +142,9 @@ input, textarea {
 }
 
 /* project start */
+#project-list {
+  margin-top: 20px;
+}
 .project-toolbar {
   margin-top: 20px;
   padding: 0 15px;
@@ -150,7 +155,7 @@ input, textarea {
   border-radius: 0;
   transition: all 0.2s;
   cursor: pointer;
-  margin-top: 30px;
+  margin-top: 10px;
   height: 400px;
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
@@ -555,7 +560,7 @@ a.dd-list-item i {
   padding-bottom: 10px;
   line-height: 24px;
 }
-.task .task-tools {
+.project-tools, .task .task-tools {
   position: absolute;
   top: 10px;
   right: 10px;
@@ -565,11 +570,15 @@ a.dd-list-item i {
   display: flex;
   justify-content: center;
 }
-.task .task-tools .dropdown {
+.project-tools {
+  top: 180px;
+  right: 0px;
+}
+.project-tools .dropdown, .task .task-tools .dropdown {
   display: flex;
   align-items: center;
 }
-.task .task-tools .dropdown button.dropdown-toggle {
+.project-tools .dropdown button.dropdown-toggle, .task .task-tools .dropdown button.dropdown-toggle {
   background: none;
   border: 0;
 }
