--- a/static/css/overwrite.css
+++ b/static/css/overwrite.css
@@ -3,12 +3,12 @@ a {
   color: #3DA8F5;
   text-decoration: none;
 }
-.btn-primary, .btn-primary:focus, .btn-primary:active, .btn-primary:hover, .btn-primary:visited, .btn-primary:active:hover {color: #fff;}
+.btn-primary, .btn-primary:focus, .btn-primary:active, .btn-primary:hover, .btn-primary:visited, .btn-primary:active:hover, .btn-primary:active:focus {color: #fff;}
 .btn-primary {
   background-color: #3DA8F5;
   border-color: #3DA8F5;
 }
-.btn-primary:focus {
+.btn-primary:focus, .btn-primary:active:focus {
   background-color: #3DA8F5;
   border-color: #3DA8F5;
 }
