--- a/static/css/common.css
+++ b/static/css/common.css
@@ -622,3 +622,124 @@ a.dd-list-item i {
   background-color: #3da8f5;
 }
 /* task end */
+
+
+/* group chat start */
+.chatroom {
+  position: fixed;
+  top: 115px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  max-width: 970px;
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 0;
+}
+.chatroom-wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.chatroom-wrapper .chatroom-head {
+/*  position: absolute;
+  top: 0;*/
+}
+.chatroom-wrapper .chatroom-head .chatroom-tools {
+  line-height: 34px;
+}
+.chatroom-wrapper .message-content-box {
+  display: flex;
+  overflow: auto;
+  height: 100%;
+}
+.chatroom-wrapper .message-content-box::-webkit-scrollbar-track {
+  background-color: #eee;
+  border-radius: 4px;
+}
+.chatroom-wrapper .message-content-box::-webkit-scrollbar {
+  width: 8px;
+  background-color: #fff;
+}
+.chatroom-wrapper .message-content-box::-webkit-scrollbar-thumb {
+  background-color: #9E9E9E;
+  border-radius: 4px;
+}
+.chatroom-wrapper .message-content-box .message-list {
+  list-style-type: none;
+  padding: 0 10px;
+  width: 100%;
+  margin-bottom: 0;
+}
+.message-content-box .message-list .message-list-item {
+}
+.message-list-item .message-body {
+  max-width: 45%;
+  float: left;
+}
+.message-list-item .message-body .message-info {
+  padding: 3px 6px;
+}
+.message-list-item .message-body.self-msg {
+  float: right;
+}
+.message-list-item .message-body.self-msg .message-info {
+  text-align: right;
+}
+.message-info .message-info-time {
+  color: #A6A6A6;
+}
+.message-content {
+  display: inline-block;
+  word-break: break-word;
+  font-size: 16px;
+  padding: 6px 12px;
+  background-color: #f2f2f2;
+  border-radius: 3px;
+}
+.message-content p {
+  margin: 0;
+}
+.chatroom-footer {
+  padding: 10px 10px;
+}
+.sendmsg-btn {
+  width: 110px;
+  height: 34px;
+  line-height: 34px;
+  float: right;
+  position: relative;
+  border-radius: 2px;
+  background-color: #ddd;
+}
+.sendmsg-btn .dropdown {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 25px;
+  height: 34px;
+}
+.sendmsg-btn .dropdown .dropdown-toggle {
+  height: 34px;
+  line-height: 34px;
+  width: 25px;
+  background: none;
+  border: 0;
+  border-left: 1px solid #fff;
+}
+.sendmsg-btn .dropdown .dropdown-menu {
+  bottom: 36px;
+  top: -66px;
+}
+.sendmsg-send {
+  line-height: 34px;
+  text-align: center;
+  height: 34px;
+  display: block;
+  width: 85px;
+  cursor: pointer;
+}
+.msg-input-area {
+  margin-right: 120px;
+}
+/* group chat end */
