--- a/static/css/common.css
+++ b/static/css/common.css
@@ -678,6 +678,7 @@ a.dd-list-item i {
   width: 100%; 
   height: 100%;
   border-radius: 3px;
+  cursor: pointer;
 }
 .chatroom-wrapper .chatroom-head .chatroom-tools {
   line-height: 34px;
@@ -708,11 +709,11 @@ a.dd-list-item i {
 .message-content-box .message-list .message-list-item {
 }
 .message-list-item .message-body {
-  max-width: 45%;
+  max-width: 80%;
   float: left;
 }
 .message-list-item .message-body .message-info {
-  padding: 3px 6px;
+  padding: 3px 6px 3px 44px;
 }
 .message-list-item .message-body.self-msg {
   float: right;
@@ -720,15 +721,30 @@ a.dd-list-item i {
 }
 .message-list-item .message-body.self-msg .message-info {
   text-align: right;
+  padding: 3px 44px 3px 6px;
 }
 .message-info .message-info-time {
   color: #A6A6A6;
 }
+.user-avatar {
+  float: left;
+  margin: 0 10px 0 0;
+  height: 34px;
+  line-height: 34px;
+  width: 34px;
+  border-radius: 3px;
+  background-color: #3da8f5;
+  cursor: pointer;
+}
+.message-list-item .message-body.self-msg .user-avatar {
+  float: right;
+  margin: 0 0 0 10px;
+}
 .message-content {
-  display: inline-block;
   word-break: break-word;
   font-size: 16px;
   padding: 6px 12px;
+  margin: 0 44px;
   background-color: #fff8dc;
   border-radius: 3px;
 }
