--- a/static/css/common.css
+++ b/static/css/common.css
@@ -732,9 +732,10 @@ a.dd-list-item i {
   line-height: 34px;
   width: 34px;
   border-radius: 3px;
-  background-color: #3da8f5;
+  background-color: #fff;
   cursor: pointer;
 }
+.user-avatar img {width: 100%; height: 100%; border-radius: 3px;}
 .message-list-item .message-body.self-msg .user-avatar {
   float: right;
   margin: 0 0 0 10px;
