--- a/static/css/common.css
+++ b/static/css/common.css
@@ -846,4 +846,43 @@ a.dd-list-item i {
   width: 100%;
   cursor: pointer;
 }
+.emoji-wapper {
+  width: 34px;
+  height: 34px;
+  position: relative;
+  float: left;
+}
+.emoji {
+  width: 34px;
+  height: 34px;
+  cursor: pointer;
+}
+.emoji > img {
+  width: 100%;
+  height: 100%;
+}
+.emoji-list {
+  list-style-type: none;
+  position: absolute;
+  width: 620px;
+  top: -235px;
+  left: -45px;
+  z-index: 999;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(240, 240, 240, .8);
+  border-radius: 4px;
+  box-shadow: 0 0 3px #eee;
+}
+.emoji-list .emoji-item {
+  width: 34px;
+  height: 34px;
+  margin: 5px;
+  display: inline-block;
+  cursor: pointer;
+}
+.emoji-list .emoji-item img {
+  width: 100%;
+  height: 100%;
+}
 /* group chat end */
